# hobot_awareness

./: README.md  README_cn.md  package.xml  setup.cfg  setup.py
config/: rules.txt
hobot_awareness/: main.py
hobot_awareness/tools/: ACTION.py  COMPLEX_ACTION.py  FUZZYPERCEPTION.py  LLMTY.py  TRANS.py
